German translation fixes (Felix Schwarz)

--- a/po/de.po
+++ b/po/de.po
@@ -32,7 +32,7 @@ msgstr "Virtual Machine Manager"
 
 #: ../src/virt-manager.py.in:54
 msgid "Error starting Virtual Machine Manager"
-msgstr "Fehler beim Starten desVirtual Machine Manager"
+msgstr "Fehler beim Starten des Virtual Machine Managers"
 
 #. ...the risk is we catch too much though
 #. Damned if we do, damned if we dont :-)(
@@ -70,7 +70,7 @@ msgstr "Zeige Zusammenfassung der Speicher-Auslastung"
 
 #: ../src/virt-manager.schemas.in.h:8
 msgid "Show network I/O in summary"
-msgstr "Zeige Zusammenfassung des Netzwerkverkehr"
+msgstr "Zeige Zusammenfassung des Netzwerkverkehrs"
 
 #: ../src/virt-manager.schemas.in.h:9
 msgid "Show run state in summary"
@@ -192,7 +192,7 @@ msgstr "Unerwarteter Fehler"
 #: ../src/virtManager/host.py:58
 #: ../src/virtManager/manager.py:120
 msgid "An unexpected error occurred"
-msgstr "Unerwarteter Fehlerist aufgetreten"
+msgstr "Unerwarteter Fehler ist aufgetreten"
 
 #: ../src/virtManager/addhardware.py:238
 #, python-format
@@ -300,9 +300,9 @@ msgid ""
 "\n"
 "Warning: this will overwrite any other changes that require a VM reboot."
 msgstr ""
-"Dieses Gerät kann nicht an die laufende Maschinen angeschlossen werden. Wollen Sie das Gerät nach dem nächsten Ausschalten der VM verfügbar machen?\n"
+"Dieses Gerät kann nicht an die laufende Maschine angeschlossen werden. Wollen Sie das Gerät nach dem nächsten Ausschalten der VM verfügbar machen?\n"
 "\n"
-"Warnung: Dies wird alle anderen Änderungen überschreiben,welche einen VM-Neustart benötigen."
+"Warnung: Dies wird alle anderen Änderungen überschreiben, welche einen VM-Neustart benötigen."
 
 #: ../src/virtManager/addhardware.py:593
 #: ../src/virtManager/create.py:774
@@ -320,11 +320,11 @@ msgstr "Hardwaretyp erforderlich"
 
 #: ../src/virtManager/addhardware.py:713
 msgid "You must specify what type of hardware to add"
-msgstr "Bitte geben sie an, welche Art von Hardware Sie hinzufügen wollen"
+msgstr "Bitte geben Sie an, welche Art von Hardware Sie hinzufügen wollen"
 
 #: ../src/virtManager/addhardware.py:718
 msgid "Storage Path Required"
-msgstr "Speicerungspfad benötigt"
+msgstr "Speicherungspfad benötigt"
 
 #: ../src/virtManager/addhardware.py:719
 msgid "You must specify a partition or a file for disk storage."
@@ -336,7 +336,7 @@ msgstr "Ziel-Gerät benötigt"
 
 #: ../src/virtManager/addhardware.py:723
 msgid "You must select a target device for the disk"
-msgstr "Sie müssen ein Zielgerät für die Fedtplatte auswählen"
+msgstr "Sie müssen ein Zielgerät für die Festplatte auswählen"
 
 #: ../src/virtManager/addhardware.py:755
 msgid "Invalid Storage Parameters"
@@ -356,7 +356,7 @@ msgstr "Die Platte \"%s\" wird bereits von einem anderem Gast verwendet!"
 #: ../src/virtManager/addhardware.py:765
 #: ../src/virtManager/create.py:1032
 msgid "Do you really want to use the disk ?"
-msgstr "Wollen sie die Platte wirklich verwenden?"
+msgstr "Wollen Sie die Platte wirklich verwenden?"
 
 #: ../src/virtManager/addhardware.py:772
 #: ../src/virtManager/create.py:1039
@@ -387,7 +387,7 @@ msgstr "Ungültige MAC-Adresse"
 #: ../src/virtManager/addhardware.py:784
 #: ../src/virtManager/create.py:1051
 msgid "No MAC address was entered. Please enter a valid MAC address."
-msgstr "Keine MAX-Adresse eingegeben. Bitte eine gültige MAC-Adresse eingeben."
+msgstr "Keine MAC-Adresse eingegeben. Bitte eine gültige MAC-Adresse eingeben."
 
 #: ../src/virtManager/addhardware.py:802
 msgid "Unsupported networking type"
@@ -402,12 +402,12 @@ msgstr "Ungültiger Netzwerk-Parameter"
 #: ../src/virtManager/create.py:1084
 #: ../src/virtManager/create.py:1086
 msgid "Mac address collision"
-msgstr "MAC-Adressenskollision"
+msgstr "MAC-Adresskollision"
 
 #: ../src/virtManager/addhardware.py:813
 #: ../src/virtManager/create.py:1087
 msgid "Are you sure you want to use this address?"
-msgstr "Wollen Sie wirklich diese Adresse wirklich verwenden?"
+msgstr "Wollen Sie diese Adresse wirklich verwenden?"
 
 #: ../src/virtManager/addhardware.py:828
 msgid "Graphics device parameter error"
@@ -908,7 +908,7 @@ msgstr "Verbinde mit Konsole für Gast"
 
 #: ../src/virtManager/details.py:1243
 msgid "Unsupported console authentication type"
-msgstr "Nicht unterstützter Konsolen-Authentifikationstype"
+msgstr "Nicht unterstützter Konsolen-Authentifikationstyp"
 
 #. If someone feels kind they could extend this code to allow
 #. user to choose what image format they'd like to save in....
@@ -1107,7 +1107,7 @@ msgstr "Fehler beim Migrieren der Domain: %s"
 #: ../src/virtManager/engine.py:567
 #, python-format
 msgid "%s will be migrated from %s to %s."
-msgstr "%s wird von %s nach %s migiriert."
+msgstr "%s wird von %s nach %s migriert."
 
 #: ../src/virtManager/engine.py:591
 msgid "No connections available."
@@ -1115,7 +1115,7 @@ msgstr "Keine Verbindungen verfügbar."
 
 #: ../src/virtManager/engine.py:617
 msgid "Connection hypervisors do not match."
-msgstr "Verbundungs-Hypervisors stimmen nicht überein."
+msgstr "Verbindungs-Hypervisors stimmen nicht überein."
 
 #: ../src/virtManager/engine.py:619
 msgid "Connection is disconnected."
@@ -1416,7 +1416,7 @@ msgstr "<small><b>Beispiel:</b> /dev/hdc2</small>"
 
 #: ../src/vmm-add-hardware.glade.h:10
 msgid "<small><b>Tip:</b> Adding a graphics tablet and configuring it as the default pointer in the guest OS will ensure the virtual cursor moves in sync with the local desktop cursor .</small>"
-msgstr "</small><b>Tipp:</b> Ein Grafik-Tablet, welches konfiguriert ist als Standard-Mauszeiger im Gast-Betriebssystem, stellt sicher, dass der virtuelle Cursor synchron mit dem lokalen Desktop-Cursor ist.</small>"
+msgstr "</small><b>Tipp:</b> Ein Grafik-Tablett, welches konfiguriert ist als Standard-Mauszeiger im Gast-Betriebssystem, stellt sicher, dass der virtuelle Cursor synchron mit dem lokalen Desktop-Cursor ist.</small>"
 
 #: ../src/vmm-add-hardware.glade.h:11
 msgid "<small><b>Tip:</b> Automatically allocated the port ensures that every virtual machine uses a different port. If two machines try to use the same port one of them will fail to start.</small>"
@@ -1621,7 +1621,7 @@ msgstr "P_artition:"
 
 #: ../src/vmm-add-hardware.glade.h:57
 msgid "Partition Location Field"
-msgstr "Partitionsprt-Feld"
+msgstr "Partitionsort-Feld"
 
 #: ../src/vmm-add-hardware.glade.h:58
 #: ../src/vmm-details.glade.h:70
@@ -1944,7 +1944,7 @@ msgstr "                                  \n"
 
 #: ../src/vmm-create-pool.glade.h:3
 msgid "<span size='x-large'>Add Storage Pool</span>"
-msgstr "<span size='x-large'>Füge Speicher-Pool hinzul</span>"
+msgstr "<span size='x-large'>Füge Speicher-Pool hinzu</span>"
 
 #: ../src/vmm-create-pool.glade.h:4
 msgid "Add a New Storage Pool"
@@ -1989,7 +1989,7 @@ msgstr "Quellen-Pfad:"
 
 #: ../src/vmm-create-pool.glade.h:14
 msgid "Specify a storage location to be later split into VM storage."
-msgstr "Gibt einen Speicherbereich an, wlecher später in VM-Speicher geteilt wird."
+msgstr "Gibt einen Speicherbereich an, welcher später in VM-Speicher geteilt wird."
 
 #: ../src/vmm-create-pool.glade.h:15
 msgid "Step 1 of 2"
@@ -2484,7 +2484,7 @@ msgstr "<b>Tipp:</b> Die 'Quelle' zeigt auf die Informationen welche vom Host-Sy
 
 #: ../src/vmm-details.glade.h:12
 msgid "<b>Tip:</b> A graphics tablet configured as the default pointer in the guest OS will ensure that the virtual cursor moves in sync with the local desktop cursor."
-msgstr "<b>Tipp:</b> Ein Grafik-Tablet, welches konfiguriert ist als Standard-Mauszeiger im Gast-Betriebssystem, stellt sicher, dass der virtuelle Cursor synchron mit dem lokalen Desktop-Cursor ist."
+msgstr "<b>Tipp:</b> Ein Grafik-Tablett, welches konfiguriert ist als Standard-Mauszeiger im Gast-Betriebssystem, stellt sicher, dass der virtuelle Cursor synchron mit dem lokalen Desktop-Cursor ist."
 
 #: ../src/vmm-details.glade.h:13
 msgid "<b>Tip:</b> For best performance, the number of virtual CPUs should be less than (or equal to) the number of physical CPUs on the host system."
@@ -3069,7 +3069,7 @@ msgid ""
 msgstr ""
 "Lokal\n"
 "Remote Passwort mit Kerberos\n"
-"Remote SSL/TLS mit x509-Zertificaten\n"
+"Remote SSL/TLS mit x509-Zertifikaten\n"
 "Remote Tunnel über SSH"
 
 #: ../src/vmm-open-connection.glade.h:15
