Update 'New VM' wizard to clarify that a shared device == bridge. (James Ralston)

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Further patches have been submitted by:
   Mike MacCana <mmaccana-at-au1-dot-ibm-dot-com>
   Andrew Gillies <anaru-at-main-dot-com>
   Richard Laager <rlaager-at-wiktel-dot-com>
+  James Ralston <ralston-at-pobox-dot-com>
 
   <...send a patch & get your name here...>
 
