Fix up 'login' button for password protected vnc (Radek Hladik)

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,7 @@ Further patches have been submitted by:
   Andrew Gillies <anaru-at-main-dot-com>
   Richard Laager <rlaager-at-wiktel-dot-com>
   James Ralston <ralston-at-pobox-dot-com>
+  Radek Hladik <radek-at-eadresa-dot-cz>
 
   <...send a patch & get your name here...>
 
