Attempt a full R/W connection regardless of polkit: only try RO if that connecti on fails (Michael Marineau)

--- a/AUTHORS
+++ b/AUTHORS
@@ -50,6 +50,7 @@ Further patches have been submitted by:
   Richard Laager <rlaager-at-wiktel-dot-com>
   James Ralston <ralston-at-pobox-dot-com>
   Radek Hladik <radek-at-eadresa-dot-cz>
+  Michael Marineau (marineam-at-gentoo-dot-org)
 
   <...send a patch & get your name here...>
 
